# DietPi-Dashboard-Next

./: Cargo.toml  README.md
.github/workflows/: push-build.yml
crates/backend/: Cargo.toml
crates/backend/src/: client.rs  terminal.rs
crates/config/: Cargo.toml
crates/frontend/: Cargo.toml
crates/frontend/assets/css/: browser.css  global.css  management.css  process.css  software.css  system.css  vars.css
crates/frontend/assets/js/: components.js  nomini-0.3.0-custom.js
crates/frontend/src/http/: auth.rs  mod.rs  query_array.rs  request.rs  response.rs  router.rs  statics.rs
crates/frontend/src/pages/: browser.rs  config.rs  login.rs  management.rs  process.rs  service.rs  software.rs  template.rs  terminal.rs
crates/frontend/src/pages/system/: fragments.rs  graph.rs  mod.rs
crates/proto/: Cargo.toml
crates/proto/src/: frontend.rs
scripts/: build-assets.bash
