[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.0"
authors = ["ravenclaw900 <ravenclaw900@proton.me>"]
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
config = { path = "./crates/config" }
proto = { path = "./crates/proto" }

anyhow = "1.0.100"
bitcode = "0.6.7"
log = { version = "0.4.29", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = "5.1.0"
tokio = "1.48.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
debug = "line-tables-only"
opt-level = "s"

[patch.crates-io]
ring = { git = "https://github.com/briansmith/ring", branch = "b/memxor" }
