[package]
name = "frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitcode.workspace = true
config = { workspace = true, features = ["frontend"] }
data-encoding = "2.9.0"
ephemeropt = "0.3.0"
flexible-hyper-server-tls = { git = "https://github.com/nonnorm/flexible-hyper-server-tls", default-features = false, features = ["ring", "rustls_helpers"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
humantime = "2.3.0"
hyper = "1.8.1"
hyper-util = { version = "0.1.18", features = ["tokio"] }
log.workspace = true
maud = "0.27.0"
pretty-bytes-typed = "0.2.0"
proto.workspace = true
rand = "0.9.2"
ring = "0.17.14"
serde.workspace = true
serde_plain = "1.0.2"
serde_urlencoded = "0.7.1"
simple_logger.workspace = true
slab = "0.4.11"
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
